objects/LLC_BI__Remote_Deposit_Capture_Service__c.object
<CustomObject>
    <description>This object is ancillary with a one-to-one lookup with the Treasury object and is used to store fields specific to remote deposit capture services.</description>
    <fields>
        <fullName>LLC_BI__Customize_Dollar_Amount__c</fullName>
        <label>Customize Dollar Amount</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CAR/LAR</fullName>
                </value>
                <value>
                    <fullName>Auto-Populate</fullName>
                </value>
                <value>
                    <fullName>Neither</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Number_of_Locations__c</fullName>
        <label>Number of Locations</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Remote_Deposit_Capture__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remote Deposit Capture</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Remote_Deposit_Limits_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remote Deposit Limits Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Treasury_Service_Reference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Treasury Service Reference</label>
        <referenceTo>LLC_BI__Treasury_Service__c</referenceTo>
        <relationshipLabel>Remote Deposit Capture Service</relationshipLabel>
        <relationshipName>Remote_Deposit_Capture_Service</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Virtual_Endorsement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Virtual Endorsement</label>
        <type>Checkbox</type>
    </fields>
    <label>Remote Deposit Capture Service</label>
    <nameField>
        <displayFormat>RD-{000000000}</displayFormat>
        <label>Remote Deposit  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Remote Deposit Capture Service</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>